tooling/nargo_cli/tests/snapshots/execute__tests__execution_success_struct_array_inputs_force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "13777649977407376331",
  "abi": {
    "parameters": [
      {
        "name": "foos",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "struct",
            "path": "Foo",
            "fields": [
              {
                "name": "bar",
                "type": {
                  "kind": "field"
                }
              },
              {
                "name": "baz",
                "type": {
                  "kind": "field"
                }
              }
            ]
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62QSwqAMAxE/Z8naRKb7LyKxXr/I2ixQqlL+yAMZIZZTN89LPf13Zcx65aVYGWO3kUk3MFZUAGWsCoqisrhlCgqq7dgHgyZIp5idMLD1LBrLrrgH7i064K041Ts+pL+Q940+XPl1fmXC4qNvN+kAQAA",
  "debug_symbols": "XYxLCoAwDAXvkrUn8Coi0k9aAqEpsRWk9O5+cCFdzhveNPBoa9woBdlhXhqwOFNI0k2tT2CVmCluw3wYJWMZPww1uZ8tZ8bhn1Uc+qr4lF7X134B",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
